# SRDController

./: .clang-format  CMakeLists.txt  README.md
arduino/ArduinoCANTransmitter/: ArduinoCANTransmitter.ino
icons/: icons.qrc
src/: can.h  can.json  devicecontroller.cpp  devicecontroller.h  main.cpp  shareddata.h
src/ui/: controlgroupbox.cpp  controlgroupbox.h  mainwindow.cpp  mainwindow.h  statusgroupbox.cpp  statusgroupbox.h
src/ui/widgets/: gridscene.cpp  gridscene.h  gridwidget.cpp  gridwidget.h  itemwrapper.cpp  itemwrapper.h  movableitemwrapper.cpp  movableitemwrapper.h
